# aqa_project

./: Dockerfile  README.md  conftest.py  pyproject.toml  pytest.ini
allure-report/: index.html
allure-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: history.json
allure-report/widgets/: behaviors.json  duration-trend.json  severity.json  status-chart.json  suites.json  summary.json
allure-results/: 11a90e7c-1196-4211-9a2d-888de890a01e-container.json  1bca0542-f857-4332-87cd-25567996724c-result.json  21aeead4-6d1c-47cc-9b58-5b6415e7fded-container.json  240166f4-e9ff-495e-8d14-dc7cdb93bec2-container.json  6a071c7d-a062-4033-82d0-5f1635f2c985-container.json  72154e54-a734-4ef5-9985-0c744016f00f-container.json  7a565fa5-254f-4b4e-9dac-4b23d26febf5-result.json  813890bd-fe70-4767-a7d6-1b805f6af704-result.json  9aa129aa-8b9b-4e29-8900-40953fb95a07-result.json  9d17d0ec-39fa-4cf0-a2b6-37c980c0bf46-container.json  b7b1678e-de90-4363-92c7-07c9284057b7-container.json  d2a607e9-0dbe-42a7-8192-9d882599dbe5-result.json  f4c605a9-61f3-4ccb-97e0-428734408fb9-result.json  fc77e458-de39-464d-add4-90b96a3149a6-result.json
locators/: locators.py
pages/api/: appeals_api.py  base_api.py  chat_message_api.py  lead_api.py  organizations_list_api.py  user_list_api.py
pages/ui/: appeals_page.py  base_page.py  companies_page.py  physical_persons_page.py
schema/: schemas.py
tests/test_api/: test_api_appeals.py  test_api_lead.py  (+3 more)
(+10 files in other folders)
